...
          content: Text(
            'Are you sure you want to change the $toChange? '
            'This will require re-stabilizing all photos.'
          ),
          actions: <Widget>[
            TextButton(
              child: const Text('Cancel'),
              onPressed: () {
                Navigator.of(context).pop(false);
              },
            ),
            TextButton(
              child: const Text('Proceed'),
...
